[project]
name = "calmiq_openenv"
version = "0.1.0"
description = "CalmIQ OpenEnv environment"
authors = [
    { name = "Sanjana Kumari" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.setuptools]
packages = ["env", "server"]
